# zim-tools

./: .codecov.yml  .gitignore  .travis.yml  ChangeLog  Makefile.am  README  README.md  appdmg.json  article.cpp  article.h  articlesource.cpp  articlesource.h  autogen.sh  configure.ac  indexer.cpp  indexer.h  macosx-build.sh  meson.build  meson_options.txt  mimetypecounter.cpp  mimetypecounter.h  pathTools.cpp  pathTools.h  queue.h  resourceTools.cpp  resourceTools.h  tools.cpp  tools.h  xapianIndexer.cpp  xapianIndexer.h  zimwriterfs.cpp
.github/workflows/: ci.yml  docker.yml  package.yml  pr.yml
debian/: changelog  control
debian/man/: zimbench.1  zimcheck.1  zimdiff.1  zimdump.1  zimpatch.1  zimrecreate.1  zimsearch.1  zimsplit.1  zimwriterfs.1
docker/: Dockerfile  zimwriterfs-macOS
src/: arg.h  article.cpp  article.h  articlesource.cpp  articlesource.h  config.h.in  indexer.h  meson.build  metadata.cpp  metadata.h  metadata_constraints.cpp  mimetypecounter.cpp  mimetypecounter.h  mimetypes.cpp  mimetypes.h  pathTools.cpp  pathTools.h  progress.h  resourceTools.cpp  testzimcheck.cpp  tools.cpp  tools.h  utils.h  version.h  zimCheck.cpp  zimCheck.h  zimDiff.cpp  zimPatch.cpp  zimRecreate.cpp  zimSearch.cpp  zimSplit.cpp  zimbench.cpp  zimcheck.cpp  zimcreatorfs.cpp  zimcreatorfs.h  zimdiff.cpp  zimdump.cpp  zimfilechecks.cpp  zimfilechecks.h  zimpatch.cpp  (+4 more)
src/xapian/: htmlparse.cc  myhtmlparse.cc
src/zimcheck/: checks.cpp  checks.h  json_tools.cpp  json_tools.h  main.cpp  meson.build  zimcheck.cpp
src/zimfuse/: main.cpp  meson.build  node.h  tree.cpp  tree.h
src/zimmount/: meson.build  zimfs.cpp  zimfs.h  zimmount.cpp  zimmount.h
src/zimwriterfs/: article.cpp  article.h  meson.build  mimetypecounter.cpp  mimetypecounter.h  tools.cpp  tools.h  zimcreatorfs.cpp  zimcreatorfs.h  zimwriterfs.cpp
subprojects/: .gitignore
test/: meson.build  metadata-test.cpp  tools-test.cpp  zimcheck-test.cpp  zimmount-test.cpp  zimwriterfs-article.cpp  zimwriterfs-zimcreatorfs.cpp
test/data/broken-html-redirects/www.cdc.gov/: index.html
test/data/broken-html-redirects/www.cdc.gov/globalhealth/healthprotection/ghs/: index.htm  index2.htm  index3.htm
test/data/broken-html-redirects/www.cdc.gov/globalhealth/healthprotection/ghsb/gphi/: partnership.htm
test/data/minimal-content/: hello.html
test/data/with-symlink/: another.html  hello.html  symlink-not-existing.html  symlink-outside.html  symlink-self.html  symlink.html
test/data/zimfiles/: bad_checksum.zim  create_test_zimfiles  good.zim  poor.zim
test/data/zimfiles/small_zimfile_data/: article1.html  main.html
travis/: compile.sh  install_deps.sh
xapian/: htmlparse.cc  htmlparse.h  myhtmlparse.cc  myhtmlparse.h  namedentities.h
zimwriterfs/: .gitignore  AUTHORS  ChangeLog  format_code.sh
zimwriterfs/contrib/: zimwriterfs-in-docker
zimwriterfs/docker/: Dockerfile
zimwriterfs/src/: meson.build
